# pythondaq

./: .gitignore  arduino_device.py  basisscript.py  diode_experiment.py  pyproject.toml  view.py
older_versions/: basisscript.py
src/pythondaq/: diode_experiment.py
src/pythondaq/controllers/: arduino_device.py  fake_arduino_device.py
src/pythondaq/models/: diode_experiment.py  fake_diode_experiment.py
src/pythondaq/ui/: diode_experiment_ui.py  diode_experiment_ui_resources.py  experiment.ui  resources.qrc
src/pythondaq/views/: cli.py  console_styling.py  gui.py  view.py  view_methods.py
tests/: test_imports.py
