[tool.poetry]
name = "pythondaq"
version = "0.1.0"
description = ""
authors = ["RJVB09 <rjvb09@ziggo.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
matplotlib = "^3.9.2"
pyvisa-py = "^0.7.2"
pyserial = "^3.5"
click = "^8.1.7"
rich = "^13.9.4"
pyside6 = "^6.8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
runexperiment = "pythondaq.views.view:main"
diode = "pythondaq.views.cli:cmd_group"
